# llama_native

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  llama.md  pubspec.yaml
.github/workflows/: build-dylib.yml  build-libs.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: CMakeLists.txt  build.dart
ios/: llama_native.podspec
ios/Classes/: llama_native.c
lib/: llama_chat.dart  llama_chat_message.dart  llama_engine.dart  llama_native.dart  llama_native_bindings.dart  llama_native_bindings_generated.dart
lib/src/: exports.dart  llama_exports.dart  llama_isolate.dart  llama_native_bindings.dart
lib/src/backend/: llama_backend.dart  llama_backend_config.dart
lib/src/batch/: llama_batch.dart
lib/src/cache/: kv_cache_manager.dart  kv_cache_snapshot.dart
lib/src/context/: inference_config.dart  llama_context.dart  (+1 more)
linux/: CMakeLists.txt
macos/: llama_native.podspec
macos/Classes/: llama_native.c
src/: CMakeLists.txt  llama_native.c  llama_native_wrapper.h
test/: backend_test.dart  build_hook_test.dart  integration_test.dart  model_test.dart
windows/: CMakeLists.txt
(+40 files in other folders)
